k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging-hw
  labels:
    istio-injection: enabled
