k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-agent
  namespace: logging-hw
spec:
  selector:
    matchLabels:
      app: log-agent
  template:
    metadata:
      labels:
        app: log-agent
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: log-agent
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: log-agent
          image: python:3.11-alpine
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -c
            - |
              [...]
