k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app
  namespace: logging-hw
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-app
  template:
    metadata:
      labels:
        app: custom-app
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: custom-app
          image: custom-app:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: config
              mountPath: /app/config
              readOnly: true
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: logs
          emptyDir: {}
        - name: config
          configMap:
            name: custom-app-config
