k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-app-pod-test
  namespace: logging-hw
  labels:
    app: custom-app-test
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
    - name: custom-app
      image: custom-app:1.1
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 8080
      volumeMounts:
        - name: logs
          mountPath: /app/logs
        - name: config
          mountPath: /app/config
          readOnly: true
  volumes:
    - name: logs
      emptyDir: {}
    - name: config
      configMap:
        name: custom-app-config
